--- a/manifest.json
+++ b/manifest.json
@@ -7,10 +7,15 @@
     "theme_color":"black",
     "scope": ".",
     "description":"This is a PWA tutorial.",
-    "icons":
+    "icons":[
     {
     "src":"icon.png",
     "sizes":"192x192",
     "type":"image/png"
     },
+    {
+    "src":"icon.png",
+    "sizes":"192×192"
+    "type":"image/png"
+    }
 }
