--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name":"PWA Tutorial",
     "short_name":"asd",
     "start_url":"index.html",
-    "display":"fullscreen",
+    "display":"standalone",
     "background_color":"#5900b3",
     "theme_color":"black",
     "scope": ".",
